[package]
name = "rustyboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
rustyboy-core = { path = "../rustyboy-core" }
