[package]
name = "rustyboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
cpal = "0.15.2"
env_logger = "0.10.0"
log = "0.4.19"
pixels = "0.13.0"
rustyboy-core = { path = "../rustyboy-core" }
winit = "0.28.6"
